//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Mahasiswa {
  id String [pk]
  nim String [unique, not null]
  nama String [not null]
  email String [unique, not null]
  password String [not null]
  isEligibleForSkripsi Boolean [not null, default: false]
  isEligibleForSidang Boolean [not null, default: false]
  catatanSkripsi String
  skripsi Skripsi
  pendaftarans PendaftaranSidang [not null]
  deletedAt DateTime
  approvalSkripsis ApprovalSkripsi [not null]
}

Table Dosen {
  id String [pk]
  nidn String [unique, not null]
  nama String [not null]
  email String [unique, not null]
  password String [not null]
  pembimbing1 Skripsi [not null]
  pembimbing2 Skripsi [not null]
  penguji1 PendaftaranSidang [not null]
  penguji2 PendaftaranSidang [not null]
  deletedAt DateTime
  approvalSkripsis ApprovalSkripsi [not null]
}

Table Skripsi {
  id String [pk]
  judul String [not null]
  id_mahasiswa String [unique, not null]
  id_pembimbing1 String
  id_pembimbing2 String
  buktiPembayaran String
  catatanPembayaran String
  status String
  acc_pembimbing1 Boolean
  acc_pembimbing2 Boolean
  catatan_pembimbing1 String
  catatan_pembimbing2 String
  mahasiswa Mahasiswa [not null]
  pembimbing1 Dosen
  pembimbing2 Dosen
  pendaftarans PendaftaranSidang [not null]
  deletedAt DateTime
}

Table PendaftaranSidang {
  id String [pk]
  id_mahasiswa String [not null]
  id_skripsi String [not null]
  id_jadwal String
  buktiPembayaranSidang String
  status String [not null]
  catatan String
  tanggal_sidang DateTime
  ruangan String
  id_penguji1 String
  id_penguji2 String
  catatan_penguji1 String
  catatan_penguji2 String
  mahasiswa Mahasiswa [not null]
  skripsi Skripsi [not null]
  penguji1 Dosen
  penguji2 Dosen
  approvalHistories ApprovalHistory [not null]
  deletedAt DateTime
}

Table ApprovalSkripsi {
  id String [pk]
  id_mahasiswa String [not null]
  id_dosen String [not null]
  status Boolean [not null]
  catatan String
  role String [not null]
  createdAt DateTime [default: `now()`, not null]
  mahasiswa Mahasiswa [not null]
  dosen Dosen [not null]

  indexes {
    (id_mahasiswa, id_dosen, role) [unique]
  }
}

Table ApprovalHistory {
  id String [pk]
  id_pendaftaran String [not null]
  id_admin String [not null]
  action String [not null]
  catatan String
  tanggal_approval DateTime [default: `now()`, not null]
  pendaftaran PendaftaranSidang [not null]
  admin Admin [not null]
}

Table Admin {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  nama String [not null]
  approvals ApprovalHistory [not null]
  news News [not null]
  deletedAt DateTime
}

Table News {
  id String [pk]
  id_admin String [not null]
  title String [not null]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  admin Admin [not null]
}

Ref: Skripsi.id_mahasiswa - Mahasiswa.id

Ref: Skripsi.id_pembimbing1 > Dosen.id

Ref: Skripsi.id_pembimbing2 > Dosen.id

Ref: PendaftaranSidang.id_mahasiswa > Mahasiswa.id

Ref: PendaftaranSidang.id_skripsi > Skripsi.id

Ref: PendaftaranSidang.id_penguji1 > Dosen.id

Ref: PendaftaranSidang.id_penguji2 > Dosen.id

Ref: ApprovalSkripsi.id_mahasiswa > Mahasiswa.id

Ref: ApprovalSkripsi.id_dosen > Dosen.id

Ref: ApprovalHistory.id_pendaftaran > PendaftaranSidang.id

Ref: ApprovalHistory.id_admin > Admin.id

Ref: News.id_admin > Admin.id